kubernetes/platform/config/drawio/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: drawio-internal
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Draw.io"
    gethomepage.dev/group: "Platform"
    gethomepage.dev/icon: "drawio.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=drawio"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "drawio.${internal_domain}"
  rules:
    - backendRefs:
        - name: drawio
          port: 8080
